<resources>
    <string name="app_name">いまチカ</string>
    <string name="title">标题</string>
    <string name="login">登録</string>
    <string name="exit">サインアウト</string>
    <string name="register">メール登録</string>
    <!--<string name="registerOrLogin">注册或登录</string>-->
    <string name="userInfo">プロフィール</string>
    <string name="cancel">Cancel</string>
    <string name="home">ホーム</string>
    <string name="chat">トーク</string>
    <string name="add">投稿</string>
    <string name="address">地址</string>
    <string name="me">Me</string>
    <string name="search">search</string>
    <string name="name">name</string>
    <string name="message">暂无消息</string>
    <string name="contact">最近联系人</string>
    <string name="hint">添加上传图片的说明</string>
    <string name="near">附近的人</string>
    <string name="error">网络请求失败，请检查网络连接</string>
    <string name="register_title">登録する</string>
    <string name="login_info"> 登録しますと\n人工知能があなたの好みを学習します\nお気に入りの追加と管理\n近くの人とのコミュニケーション\n今週近くのおすすめイベントをメールします \n海外でも日本語で使えます</string>
    <string name="FaceBook">Facebook で登録する</string>
    <string name="Google"> Google で登録する</string>
    <string name="Line">Line で登録する</string>
    <string name="Mail">メールで登録する</string>
    <string name="treaty_">と</string>
    <string name="treaty">に同意します</string>
    <string name="company_email">Copyright © imachika.com</string>
    <string name="web_url1">利用規約</string>
    <string name="web_url2">プライバシーポリシー</string>
    <string name="new_notice">新消息通知</string>

    <string name="no_datas">近くに(</string>
    <string name="no_datas_b">)がありません</string>

    <string name="commend_one">今日、今週この近くで開催するイベント</string>
    <string name="commend_two">近くのお出かけ・観光</string>
    <string name="commend_three">近くのレストラン</string>
    <string name="commend_four">近くの喫茶店</string>
    <string name="commend_five">近くで買い物</string>

    <string name="toast_location">あなたの場所が見つかりません、位置情報のアクセスを設定で許可してください无法定位，请打开定位服务</string>
    <string name="toast_close_app">もう一度押すとプログラムが終了します。</string>
    <string name="toast_publish">成功を発表する</string>
    <string name="photo">ピクチャ</string>


    <!-- 商户详情页面 -->
    <string name="open_map">ナビ</string>
    <string name="share">シェア</string>
    <string name="hint_content">コンテンツが非表示になっています</string>
    <string name="jubao">通報</string>
    <string name="detail_jubao">通報する</string>
    <string name="hint_item">非表示にする</string>
    <string name="show_item">表示する</string>
    <string name="re_review">返信</string>
    <string name="zan">いいね</string>
    <string name="author">投稿者 </string>
    <string name="review">レビューする</string>
    <string name="cancle_collect">お気に入りから削除</string>
    <string name="collect">お気に入りに追加</string>
    <string name="phone_num">電話する</string>
    <string name="talk">トーク</string>
    <string name="re_review_hint">コメントする</string>
    <string name="send">送信</string>
    <string name="map">地図</string>
    <string name="list">リスト</string>

    <string name="evaluate_review_hint">コメントする</string>
    <string name="search_hint_content">喫茶店、イベント、温泉、個人レッスン...</string>
    <string name="search_hint_add">住所、駅名、市区町村</string>
    <string name="search_hint_add_now">现在地</string>
    <string name="opening_time">営業時間：</string>

    <string name="sort_share">シェアする</string>

    <!-- 登录页面 -->

    <string name="hint_num">メールアドレス</string>
    <string name="hint_psd">パスワード</string>

    <string name="login_title">ログイン</string>
    <string name="FaceBook_reg">Facebook ログイン</string>
    <string name="Google_reg"> Google ログイン</string>
    <string name="Line_reg">Line ログイン</string>

    <!-- report -->
    <string name="report_content">通報の理由を選択してください</string>
    <string name="report_case_1">詐欺</string>
    <string name="report_case_2">いたずら</string>
    <string name="report_case_3">真実ではない</string>
    <string name="report_case_4">著作権侵害</string>
    <string name="report_case_5">未成年アダルト</string>
    <string name="report_case_6">その他</string>
    <string name="report_pic">証拠写真</string>
    <string name="report_con_hint">詳細</string>

    <!-- facebook app id -->
    <string name="facebook_app_id">2008632952691077</string>
    <string name="fb_login_protocol_scheme">fb2008632952691077</string>

    <string name="login_check_tost">利用規約とポリシーに同意する必要があります</string>
    <string name="login_email">アカウントをすでにもっている</string>
    <!-- google -->
    <string name="google_server_client_id">37459863309-lk3brhftvm4bp3kfc81ltj85r5kjn2j2.apps.googleusercontent.com</string>
    <!--<string name="fb_login_protocol_scheme">fb2008632952691077</string>-->

    <!-- 投稿 -->

    <string name="submit_title_one">店铺</string>
    <string name="submit_title_two">個人サービス</string>
    <string name="submit_title_three">イベント</string>

    <string name="pic_con">タイトル</string>
    <string name="submit_hint_one">详细内容をここに入力</string>

    <string name="submit_hint_two"> 検索されたいキーワードを複数入力 \n (例：ワイン，サークル，主婦向け)</string>
    <string name="submit_show">詳細入力</string>

    <string name="submit_hint">詳細入力を隠す</string>
    <string name="submit_price_hint">価格（数字を入力してください、単位：円）</string>
    <string name="submit_start_time_hint">開始時間</string>
    <string name="submit_end_time_hint">終了時間</string>
    <string name="submit_tel_hint">店舗電話番号</string>
    <string name="submit_phone_hint">本人の携帯電話(非公開)</string>
    <string name="submit_publish">掲載</string>

    <string name="submit_useasda">カテゴリ</string>
    <string name="submit_place">場所</string>

    <string name="net_bad_retry">インターネットにアクセスできませんでした</string>//网络异常
    <string name="toast_bad_email">メールボックス形式が正しくありません</string>
    <string name="toast_null_email">電子メールまたはパスワードを空にすることはできません</string>

    <!-- Me -->
    <string name="me_collect">お気に入り</string>
    <string name="me_version">バージョン情報</string>
    <string name="me_title">Me</string>
    <string name="takePhoto">写真をとる</string>
    <string name="selectPhoto">アルバムから選択</string>
    <string name="cancel_img">キャンセル</string>
    <string name="save_success">保存しました</string>
    <string name="userInfo_img">写真</string>
    <string name="userInfo_name">名前</string>
    <string name="userInfo_sex">性别</string>
    <string name="userInfo_male">男</string>
    <string name="userInfo_female">女</string>
    <string name="userInfo_tel">携帯番号</string>
    <string name="userInfo_address">地域</string>
    <string name="userInfo_sign">ひとこと</string>
    <string name="save">保存</string>
    <string name="complete">完成</string>

    <!-- setting -->
    <string name="setting_notice">新消息接受通知</string>
    <string name="setting_voice">声音</string>

    <string name="toast_login_psd_error">パスワードが一致しません</string>
    <string name="toast_login_not_reg">このメールアドレスは登録されていません</string>
    <string name="toast_login_email_error">正しいメールアドレスを入力してください</string>
    <string name="toast_login_user_registered">このメールはすでに登録されています</string>

    <string name="collection_none">まだお気に入りがありません</string>

</resources>
