<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itmg.imachika.ui.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bg"
        android:padding="@dimen/padding_5"
        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/padding_30"
            android:layout_height="@dimen/padding_30"
            android:layout_centerVertical="true"
            android:src="@drawable/go_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:singleLine="true"
            android:ellipsize="end"
            android:ems="11"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_20"
            android:paddingRight="@dimen/padding_20"
            android:paddingTop="@dimen/padding_10"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_info"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12"
                />

            <TextView
                android:id="@+id/tv_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_btn_shape"
                android:text="@string/FaceBook"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/icon_fb"
                android:layout_marginTop="@dimen/text_size_20"
                android:padding="@dimen/padding_10"
                android:drawablePadding="@dimen/padding_20"
                android:textSize="@dimen/text_size_18"
                />

            <TextView
                android:id="@+id/tv_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/google_btn_shape"
                android:layout_marginTop="@dimen/padding_20"
                android:text="@string/Google"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/icon_gm"
                android:drawablePadding="@dimen/padding_20"
                android:textSize="@dimen/text_size_18"
                android:padding="@dimen/padding_10"
                />
            <TextView
                android:id="@+id/tv_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wechat_btn_shape"
                android:layout_marginTop="@dimen/padding_20"
                android:drawableLeft="@drawable/icon_line"
                android:text="@string/Line"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/padding_20"
                android:textSize="@dimen/text_size_18"
                android:padding="@dimen/padding_10"
                />
            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/email_btn_shape"
                android:layout_marginTop="@dimen/padding_20"
                android:text="@string/Mail"
                android:drawableLeft="@drawable/icon_mail"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/padding_20"
                android:textSize="@dimen/text_size_18"
                android:padding="@dimen/padding_10"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                >
                <CheckBox
                    android:id="@+id/checkbox"
                    android:button="@null"
                    android:checked="true"
                    android:background="@drawable/check_selector"
                    android:layout_marginRight="@dimen/padding_3"
                    android:layout_width="18dp"
                    android:layout_height="18dp" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_url1"
                    android:textColor="@color/blue"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treaty_"
                    />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_url2"
                    android:textColor="@color/blue"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treaty"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/padding_30"
                android:text="@string/login_email"
                android:textSize="@dimen/text_size_16"
                android:padding="@dimen/padding_10"
                android:textColor="@color/line"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
