<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itmg.imachika.ui.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bg"
        android:padding="@dimen/padding_5"
        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/padding_30"
            android:layout_height="@dimen/padding_30"
            android:layout_centerVertical="true"
            android:src="@drawable/go_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:singleLine="true"
            android:ellipsize="end"
            android:ems="11"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_20"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_btn_shape"
                android:text="@string/FaceBook_reg"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/icon_fb"
                android:padding="@dimen/padding_10"
                android:drawablePadding="@dimen/padding_20"
                android:textSize="@dimen/text_size_18"
                />

            <TextView
                android:id="@+id/tv_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/google_btn_shape"
                android:layout_marginTop="@dimen/padding_20"
                android:text="@string/Google_reg"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/icon_gm"
                android:drawablePadding="@dimen/padding_20"
                android:textSize="@dimen/text_size_18"
                android:padding="@dimen/padding_10"
                />

            <TextView
                android:id="@+id/tv_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wechat_btn_shape"
                android:layout_marginTop="@dimen/padding_20"
                android:drawableLeft="@drawable/icon_line"
                android:text="@string/Line_reg"
                android:textColor="@color/white"
                android:drawablePadding="@dimen/padding_20"
                android:textSize="@dimen/text_size_18"
                android:padding="@dimen/padding_10"
                />

            <EditText
                android:id="@+id/et_mail"
                style="@style/edit_normal"
                android:hint="@string/hint_num"
                android:textColorHint="@color/title_text"
                android:background="@null"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"></View>

            <EditText
                android:id="@+id/et_pwd"
                style="@style/edit_normal"
                android:hint="@string/hint_psd"
                android:textColorHint="@color/title_text"
                android:inputType="textPassword"
                android:background="@null"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                >

                <CheckBox
                    android:id="@+id/checkbox"
                    android:button="@null"
                    android:checked="true"
                    android:background="@drawable/check_selector"
                    android:layout_marginRight="@dimen/padding_3"
                    android:layout_width="18dp"
                    android:layout_height="18dp" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_url1"
                    android:textColor="@color/blue"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treaty_"
                    />
                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_url2"
                    android:textColor="@color/blue"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/treaty"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20"
                android:text="@string/login_title"
                android:background="@drawable/email_btn_shape"
                />

            <RelativeLayout
                android:id="@+id/login_register_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/login_go_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_title"
                    android:padding="@dimen/padding_5"
                    />

                <TextView
                    android:id="@+id/login_go_find_psd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title"
                    android:padding="@dimen/padding_5"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    />

            </RelativeLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>
