<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itmg.imachika.ui.EmailRegActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bg"
        android:padding="@dimen/padding_5"
        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/padding_30"
            android:layout_height="@dimen/padding_30"
            android:layout_centerVertical="true"
            android:src="@drawable/go_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:singleLine="true"
            android:ellipsize="end"
            android:ems="11"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/img"
                android:layout_width="@dimen/padding_100"
                android:layout_height="@dimen/padding_100"
                android:src="@drawable/add_img"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/padding_50"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/women_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_40"
                    android:layout_marginRight="@dimen/padding_10"
                    style="@style/radio"
                    android:text="@string/userInfo_female"
                    />
                <RadioButton
                    android:id="@+id/man_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_10"
                    android:layout_marginRight="@dimen/padding_40"
                    style="@style/radio"
                    android:text="@string/userInfo_male"
                    />
            </RadioGroup>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_20">

                <EditText
                    style="@style/edit_email_reg"
                    android:id="@+id/et_nick_name"
                    android:hint="@string/userInfo_name"
                    android:textColorHint="@color/title_text"
                    android:background="@null"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line"></View>

                <EditText
                    android:id="@+id/et_number"
                    style="@style/edit_email_reg"
                    android:textColorHint="@color/title_text"
                    android:hint="@string/userInfo_tel"
                    android:inputType="number"
                    android:maxLength="11"
                    android:background="@null"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line"></View>

                <EditText
                    android:id="@+id/et_mail"
                    style="@style/edit_email_reg"
                    android:textColorHint="@color/title_text"
                    android:hint="@string/hint_num"
                    android:background="@null"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line"></View>

                <EditText
                    android:id="@+id/et_pwd"
                    style="@style/edit_email_reg"
                    android:textColorHint="@color/title_text"
                    android:hint="@string/hint_psd"
                    android:inputType="textPassword"
                    android:background="@null"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line"></View>

            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_50"
                android:layout_marginRight="@dimen/padding_50"
                android:layout_marginTop="@dimen/padding_20"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20"
                android:text="@string/login"
                android:background="@drawable/email_btn_shape"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
